# pico_sensor_aggregator

./: CMakeLists.txt  LICENSE  MIT.txt  README.md  crypto_consts.h  hardware_config.h  main.c  mbedtls_config.h  non_volatile.c  non_volatile.h  runtime_settings.c  runtime_settings.h  sensors.c  sensors.h  tls_mqtt_client.c  tls_mqtt_client.h  utility.h  wifi_arch.c  wifi_arch.h
access_point_httpd/: htmlgen  http_control.c  http_control.h  lwipopts.h  myfs.c
access_point_httpd/.cache/clangd/index/: dhcpserver.c.10684615953EA895.idx  dhcpserver.h.B7286C26D43691D6.idx  dnsserver.c.E6455A0A436E704C.idx  dnsserver.h.0F81495325D2893F.idx  lwipopts.h.109D2F660762A9B1.idx  picow_access_point.c.0B2B231FE5894846.idx
access_point_httpd/fs/: index.ssi
ds18b20_pio/: CMakeLists.txt  README.md  ds18b20.c  ds18b20.h
ds18b20_pio/.cache/clangd/index/: ds18b20.c.3446B5D4DE907F1E.idx  ds18b20.c.7435E59EC351AF75.idx  ds18b20.h.487B5687100F6486.idx  ds18b20.h.65C3697AEB30DB47.idx  main.c.C81A96CFC0F9396C.idx  one_wire_pico.c.CE9B52E7721C1786.idx  one_wire_pico.h.F9834E5A45C076F3.idx  onewire_library.c.3430A8DD9EC0152E.idx  onewire_library.h.FF3BB59AB5E9928F.idx  ow_rom.h.E445CEDED7CA7B07.idx
ds18b20_pio/onewire_library/: CMakeLists.txt  onewire_library.h
